# GitHub-MyApp

./: .gitignore
Linux/MyService/: CMakeLists.txt  MyService  MyService.cbp  build  config.json
Linux/MyService/include/: BaseConnection.cpp  BaseConnection.h  BaseConnectionManager.cpp  BaseConnectionManager.h  BaseServer.cpp  BaseServer.h  JsonFileReader.cpp  Logger.cpp  Logger.h
Linux/MyService/include/rapidjson/: stream.h  writer.h
Linux/MyService/src/: BaseConnection.cpp  BaseConnection.h  BaseServer.cpp  BaseServer.h  Config.cpp  Config.h  JsonFileReader.cpp  Server.cpp  Server.h  main.cpp
